<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/screen_home" />
        <item android:id="@+id/nav_connection" android:title="@string/screen_connection" />
        <item android:id="@+id/nav_manual" android:title="@string/screen_manual" />
        <item android:id="@+id/nav_auto" android:title="@string/screen_auto" />
        <item android:id="@+id/nav_calibration" android:title="@string/screen_calibration" />
        <item android:id="@+id/nav_observations" android:title="@string/screen_observations" />
        <item android:id="@+id/nav_history" android:title="@string/screen_history" />
        <item android:id="@+id/nav_catalog" android:title="@string/screen_catalog" />
        <item android:id="@+id/nav_notifications" android:title="@string/screen_notifications" />
        <item android:id="@+id/nav_settings" android:title="@string/screen_settings" />
        <item android:id="@+id/nav_help" android:title="@string/screen_help" />
    </group>
</menu>
